# vlm-exam

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
notebooks/: vqa_benchmark.ipynb
results/: counting_claude-fable-5_low_20260708_080505.jsonl  counting_claude-opus-4-8_low_20260709_102655.jsonl  counting_claude-sonnet-5_low_20260708_160037.jsonl  counting_gemini-2.5-pro_low_20260708_160756.jsonl  counting_gemini-3-flash-preview_low_20260708_160419.jsonl  counting_gemini-3.1-pro-preview_low_20260709_101915.jsonl  counting_gemini-3.5-flash-lite_low_20260721_182822.jsonl  counting_gemini-3.5-flash_low_20260708_080014.jsonl  counting_gemini-3.6-flash_low_20260721_182245.jsonl  counting_glm-5v-turbo_low_20260708_151144.jsonl  counting_glm-5v-turbo_low_20260708_163322.jsonl  counting_gpt-5.4-mini_low_20260709_150535.jsonl  counting_gpt-5.5_low_20260708_161144.jsonl  counting_gpt-5.6-luna_low_20260709_190359.jsonl  counting_gpt-5.6-sol_low_20260709_191533.jsonl  counting_gpt-5.6-terra_low_20260709_190909.jsonl  counting_kimi-k2.6_low_20260709_145204.jsonl  counting_kimi-k3_low_20260723_232722.jsonl  counting_muse-spark-1.1_low_20260723_105718.jsonl  counting_qwen-3-vl-235b_low_20260709_102948.jsonl  counting_qwen-3.5-27b_low_20260723_171313.jsonl  counting_qwen-3.7-plus_low_20260708_151121.jsonl  counting_qwen-3.7-plus_low_20260708_163029.jsonl  detection_claude-fable-5_low_20260707_161042.jsonl  detection_claude-fable-5_low_20260707_211132.jsonl  detection_claude-fable-5_low_20260721_151757.jsonl  detection_claude-opus-4-8_low_20260709_110809.jsonl  (+146 more)
(+44 files in other folders)
